# cutie-messaging-daemon

./: CMakeLists.txt  README.md
debian/: control  cutie-messaging-daemon.user.service  rules
src/: main.cpp  messaging.cpp  messaging.h
